hphp/test/slow/late-init-soft/no-initial1.php.expectf
Fatal error: <<__SoftLateInit>> property 'A::$x1' cannot have an initial value in %s/no-initial1.php on line 5
